message Response {

    extensions 1000 to max;
    enum Type {
        ERROR = 0;
        FILE_INFO = 1;
        CHUNK = 2;
    }
    required Type type = 1;

}

message Error {
    extend Response {
        optional Error response = 1000;
    }

    enum Code {
        UNKNOWN = 0;
        UNKNOWN_COMMAND = 1;
        UUID_NOT_FOUND = 2;
        CHUNK_OUT_OF_BOUNDS = 3;
    }
    required Code code = 1;
}

message FileInfo {
    extend Response {
        optional FileInfo response = 1001;
    }

    required string UUID = 1;
    required string name = 2;
    required string mimeType = 3;
    required int32 numChunks = 4;
}

message Chunk {
    extend Response {
        optional Chunk response = 1002;
    }

    required string UUID = 1;
    required int64 chunk = 2;
    required bytes data = 3;
}
